# myEnv

./: .aworkGit.txt  chromeExtend.yml  codegen.yml  init  lib.yml  macApp.yml  vscExtend.yml
0000/: line.md
5sense/eye/: eng.yml
api/: schema.graphql
api/graphQl/: subgraph.yaml
cicd/: .editorconfig
cicd/other/: .percy.yml
clone/: clone.md  env.md  url.md
clone/env/: cicd.md  js.md  (+7 more)
devcontainer/: Dockerfile.yml  devcontainer.json
docker/: Dockerfile  dockerExtend.yml
dotflies/: .viminfo
engEnv/: engEnv.md
firebase/: .firebaserc  FirebaseConfig.ts
gitGit/: commitlint.config.js
github/: stale.yml
githubAction/: codeql.yml  cypress.yml
homebrew/: homebrew.md
ios/: iphone.yml
keyboard/: input.md
mac/: app.yml  browser.yml  chrome.yml  chromeExtend.yml  engEnv.yml  macApp.yml  safari.yml  setting.yml  version.yml
macOs/: app.yml  chrome.yml  safari.yml  setting.yml
mobile/: iphone.yml  watch.yml
npm/: tsconfig.json
npmModule/: .babelrc  .esLintrc.json  .prettierignore  .prettierrc.js  jest.config.js  webpack.config.js
restQraph/: schema.graphql
sol/: hardhat.config.ts  helper-hardhat-config.ts  hhScript.json  truffle-config.js
solCICD/: .snyk  foundry.toml  slither.config.json
subgraph/: subgraph.yaml  turbo.json
test/: .travis.yml  cypress.config.js  jest.config.js  mocha.js  tstScript.json
testUnit/: chai.js
vsc/: setting.json
vscode/: keybinding.json  lauch.json  setting.json  syncLocalSetting.json  vscExtend.yml
zsh/: Basic.terminal  Makefile  shell.nix
zzOther/other/: .percy.yml  BUILD.bazel  rollup.config.js
(+97 files in other folders)
