# Copyright 2021 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# bazelとは、Googleが開発したビルドツールです。

load("@bazel_skylib//lib:selects.bzl", "selects")
load("@rules_python//python:defs.bzl", "py_binary")
load("@v8_python_deps//:requirements.bzl", "requirement")
load(
    "@v8//:bazel/defs.bzl",
    "v8_binary",
    "v8_build_config",
    "v8_config",
    "v8_custom_config",
    "v8_flag",
    "v8_int",
    "v8_library",
    "v8_mksnapshot",
    "v8_string",
    "v8_torque",
)
load(":bazel/v8-non-pointer-compression.bzl", "v8_binary_non_pointer_compression")

        ":torque_base_headers",
        ":v8_libbase",
    ],
)